--- a/README.Rmd
+++ b/README.Rmd
@@ -40,7 +40,8 @@ related to SDG17.
 
 library(knitr)
 sdg_table <- data.frame(
-  "Source" = c("[Core Elsevier (Work in Progress)](https://data.mendeley.com/datasets/87txkw7khs/1)", 
+  "Source" = c("[USC-CMU keyword list](https://github.com/USC-Office-of-Sustainability/USC-SDGmap/blob/main/Keyword%20Lists/Elsevier100_keywords.csv)", 
+               "[Core Elsevier (Work in Progress)](https://data.mendeley.com/datasets/87txkw7khs/1)", 
                "[Improved Elsevier Top 100](https://data.mendeley.com/datasets/9sxdykm8s4/2)", 
                "[SDSN](https://ap-unsdsn.org/regional-initiatives/universities-sdgs/)", 
                "[CMU Top 250 Words](https://www.cmu.edu/leadership/the-provost/provost-priorities/sustainability-initiative/sdg-definitions.html)",
