--- a/README.Rmd
+++ b/README.Rmd
@@ -40,7 +40,7 @@ related to SDG17.
 
 library(knitr)
 sdg_table <- data.frame(
-  "Source" = c("[USC-CMU keyword list](https://github.com/USC-Office-of-Sustainability/USC-SDGmap/blob/main/Keyword%20Lists/Elsevier100_keywords.csv)", 
+  "Source" = c("[USC-CMU keyword list](www.google.com)", 
                "[Core Elsevier (Work in Progress)](https://data.mendeley.com/datasets/87txkw7khs/1)", 
                "[Improved Elsevier Top 100](https://data.mendeley.com/datasets/9sxdykm8s4/2)", 
                "[SDSN](https://ap-unsdsn.org/regional-initiatives/universities-sdgs/)", 
@@ -48,7 +48,8 @@ sdg_table <- data.frame(
                "[CMU Top 500 Words](https://www.cmu.edu/leadership/the-provost/provost-priorities/sustainability-initiative/sdg-definitions.html)",
                "[CMU Top 1000 Words](https://www.cmu.edu/leadership/the-provost/provost-priorities/sustainability-initiative/sdg-definitions.html)",
                "[University of Auckland (Work in Progress)](https://www.sdgmapping.auckland.ac.nz/)", "[University of Toronto (Work in Progress)](https://data.utoronto.ca/sustainable-development-goals-sdg-report/sdg-report-appendix/)"),
-  "Dataset" = c("`elsevier_keywords`",
+  "Dataset" = c("`cmu_usc_pwg_mapped`",
+             "`elsevier_keywords`",
              "`elsevier100_keywords`",
              "`sdsn_keywords`",
              "`cmu250_keywords`",
@@ -56,11 +57,11 @@ sdg_table <- data.frame(
              "`cmu1000_keywords`",
              "`auckland_keywords`",
              "`toronto_keywords`"),
-  "CSV" = c("[Link](https://github.com/pwu97/SDGmapR/blob/main/datasets/elsevier_keywords_cleaned.csv)", "[Link](https://github.com/pwu97/SDGmapR/blob/main/datasets/elsevier100_keywords_cleaned.csv)", "[Link](https://github.com/pwu97/SDGmapR/blob/main/datasets/sdsn_keywords_cleaned.csv)", 
+  "CSV" = c("[Link](https://github.com/USC-Office-of-Sustainability/USC-SDGmap/blob/main/Keyword%20Lists/Elsevier100_keywords.csv)", "[Link](https://github.com/pwu97/SDGmapR/blob/main/datasets/elsevier_keywords_cleaned.csv)", "[Link](https://github.com/pwu97/SDGmapR/blob/main/datasets/elsevier100_keywords_cleaned.csv)", "[Link](https://github.com/pwu97/SDGmapR/blob/main/datasets/sdsn_keywords_cleaned.csv)", 
 "[Link](https://github.com/pwu97/SDGmapR/blob/main/datasets/cmu250_keywords_cleaned.csv)",
 "[Link](https://github.com/pwu97/SDGmapR/blob/main/datasets/cmu500_keywords_cleaned.csv)",
 "[Link](https://github.com/pwu97/SDGmapR/blob/main/datasets/cmu1000_keywords_cleaned.csv)", "", ""),
-  "SDG17" = c("No", "No", "Yes", "No", "No", "No", "Yes", "Yes")
+  "SDG17" = c("Yes", "No", "No", "Yes", "No", "No", "No", "Yes", "Yes")
 )
 kable(sdg_table)
 
