--- a/README.Rmd
+++ b/README.Rmd
@@ -12,8 +12,8 @@ knitr::opts_chunk$set(echo = TRUE)
 
 # USC SDGmap R Package
 
-Peter Wu at Carnegie Mellon was the inspiration of this project, and his original R package can be found on [Github](https://github.com/pwu97/SDGmapR). 
-At USC, Brian Tinsley and Julie Hopper in the Office of Sustainability have been working to develop this package further and raise sustainability awareness in higher education.
+Peter Wu at Carnegie Mellon wrote the initial code that inspired this project, and his original R package can be found on [Github](https://github.com/pwu97/SDGmapR). 
+At USC, Brian Tinsley and Dr. Julie Hopper in the Office of Sustainability have been working to develop this package further and raise sustainability awareness in higher education by mapping USC course descriptions to the United Nations Sustainability Development Goals.
 
 The goal of `SDGmapR` is to provide an open-source foundation for the systematic mapping
 to the United Nations Sustainable Development Goals (SDGs). In this R package one can find publicly available [SDG keyword datasets](https://github.com/USC-Office-of-Sustainability/USC-SDGmap/tree/main/Keyword%20Lists) in the `tidy` data format, the [UN Official SDG color scheme](https://www.un.org/sustainabledevelopment/wp-content/uploads/2019/01/SDG_Guidelines_AUG_2019_Final.pdf) and several functions related to the mapping of text to particular sets of keywords.
