--- a/README.Rmd
+++ b/README.Rmd
@@ -10,15 +10,41 @@ knitr::opts_chunk$set(echo = TRUE)
 ```
 
 
-# USC SDGmap R Package
+# USC Sustainability Course Finder
+
 
 Peter Wu at Carnegie Mellon wrote the initial code that inspired this project, and his original R package can be found on [Github](https://github.com/pwu97/SDGmapR). 
 At USC, Brian Tinsley and Dr. Julie Hopper in the Office of Sustainability have been working to develop this package further and raise sustainability awareness in higher education by mapping USC course descriptions to the United Nations Sustainability Development Goals.
 
-The goal of `SDGmapR` is to provide an open-source foundation for the systematic mapping
-to the United Nations Sustainable Development Goals (SDGs). In this R package one can find publicly available [SDG keyword datasets](https://github.com/USC-Office-of-Sustainability/USC-SDGmap/tree/main/Keyword%20Lists) in the `tidy` data format, the [UN Official SDG color scheme](https://www.un.org/sustainabledevelopment/wp-content/uploads/2019/01/SDG_Guidelines_AUG_2019_Final.pdf) and several functions related to the mapping of text to particular sets of keywords.
+## Table of Contents
+
+- [Installation](#installation)
+- [Cleaning Course Data](#cleaning-course-data)
+
 
 ## Installation
+
+If you wish to install this package on your computer, clone this repository by following [these instructions.](https://docs.github.com/en/repositories/creating-and-managing-repositories/cloning-a-repository)
+Once installed, you can open, view, and edit all files in this repository. 
+
+## Cleaning Course Data
+
+Course data was retrieved from the USC’s Office of Academic Records and Registrar, and the raw data files can be found in the `cleaning_raw_data` folder.
+These files had lots of problems with spacing and column names, and we addressed these issues in `cleaning_scattered_files.R`.
+<!-- show the dataframe -->
+```{r eval=FALSE, echo=FALSE}
+data = read.csv("cleaning_raw_data/raw_usc_data/SOC_files/20233_SOC.csv")
+```
+
+```{r}
+top <- head(data)
+knitr::kable(top, format = "html")
+```
+
+
+
+Here is the code for cleaning a file... 
+
 
 
 
