--- a/README.Rmd
+++ b/README.Rmd
@@ -1,10 +1,8 @@
 ---
 title: "README"
-output: 
-  # html_document:
-  #   df_print: paged
-  md_document:
-    variant: markdown_github
+output: github_document
+  # md_document:
+  #   variant: markdown_github
 ---
 
 ```{r setup, include=FALSE}
@@ -43,15 +41,60 @@ Once installed, you can open, view, and edit all files in this repository.
 
 ## Keyword List
 
+The way in which we map course descriptions to the SDGs is through keyword lists which has keywords relevant for each SDG. In prior versions of this package, we attempted to use various Python and R packages, such as [text2sdg](https://www.text2sdg.io/), to give weights to keywords based on their relevance to the goal. We have since transitioned to using *frequencies* of keywords since the varying weights were often ambiguous. With this new method, each keyword has a weight of 1. The first few rows of the USC keyword table, which has over 4200 keywords, are shown below. 
+
+
+```{r, echo=F}
+library(knitr)
+keywords = read.csv("data/usc_keywords.csv")
+kw = keywords %>% select(goal, keyword, color) %>% (head)
+kable(kw)
+```
+
+The USC keyword list has been modified many times with the help of the Presidential Working Group (PWG) and is continually being improved to increase accuracy. 
+
+The table below lists publicly available SDG keywords that have been published online. Some
+of the lists have weights associated with every keyword, while some do not. Also note that some of these keyword lists do not have keywords for SDG 17.
+
+```{r, echo=FALSE, example}
+library(knitr)
+sdg_table <- data.frame(
+  "Source" = c("[USC Keywords (Work in Progress)](https://github.com/USC-Office-of-Sustainability/SustainabilityCourseFinder/blob/main/shiny_app/usc_keywords.csv)",
+               "[Core Elsevier (Work in Progress)](https://data.mendeley.com/datasets/87txkw7khs/1)", 
+               "[Improved Elsevier Top 100](https://data.mendeley.com/datasets/9sxdykm8s4/2)", 
+               "[SDSN](https://ap-unsdsn.org/regional-initiatives/universities-sdgs/)", 
+               "[CMU Top 250 Words](https://www.cmu.edu/leadership/the-provost/provost-priorities/sustainability-initiative/sdg-definitions.html)",
+               "[CMU Top 500 Words](https://www.cmu.edu/leadership/the-provost/provost-priorities/sustainability-initiative/sdg-definitions.html)",
+               "[CMU Top 1000 Words](https://www.cmu.edu/leadership/the-provost/provost-priorities/sustainability-initiative/sdg-definitions.html)",
+               "[University of Auckland (Work in Progress)](https://www.sdgmapping.auckland.ac.nz/)", "[University of Toronto (Work in Progress)](https://data.utoronto.ca/sustainable-development-goals-sdg-report/sdg-report-appendix/)"),
+  "Dataset" = c("`usc_keywords`",
+              "`elsevier_keywords`",
+             "`elsevier100_keywords`",
+             "`sdsn_keywords`",
+             "`cmu250_keywords`",
+             "`cmu500_keywords`",
+             "`cmu1000_keywords`",
+             "`auckland_keywords`",
+             "`toronto_keywords`"),
+  "CSV" = c("[Link](https://github.com/USC-Office-of-Sustainability/SustainabilityCourseFinder/blob/main/shiny_app/usc_keywords.csv)",
+    "[Link](https://github.com/pwu97/SDGmapR/blob/main/datasets/elsevier_keywords_cleaned.csv)", "[Link](https://github.com/pwu97/SDGmapR/blob/main/datasets/elsevier100_keywords_cleaned.csv)", "[Link](https://github.com/pwu97/SDGmapR/blob/main/datasets/sdsn_keywords_cleaned.csv)", 
+"[Link](https://github.com/pwu97/SDGmapR/blob/main/datasets/cmu250_keywords_cleaned.csv)",
+"[Link](https://github.com/pwu97/SDGmapR/blob/main/datasets/cmu500_keywords_cleaned.csv)",
+"[Link](https://github.com/pwu97/SDGmapR/blob/main/datasets/cmu1000_keywords_cleaned.csv)", "", "")
+)
+kable(sdg_table)
+```
 
 
 
 ## Cleaning Course Data
 
-While I do not expect another school's data to be of the same format as the raw files at USC, I am still including some details on how we cleaned the files in hopes that it may address some common problems others might have with their data. 
+While I do not expect another school's data to be of the same format as the raw files at USC, I am still including some details on how we cleaned the files in hopes that it may address some common problems others might have with their data.  
+
 <!-- add link to a file? -->
 Course data was retrieved from the USC’s Office of Academic Records and Registrar, and the raw data files, as well as the R scripts to clean them, can be found in the `cleaning_raw_data` folder.
-These files had lots of problems with spacing and column names, and we addressed these issues in `cleaning_scattered_files.R`.
+These files had lots of problems with spacing and column names, and we addressed these issues in `cleaning_scattered_files.R`.  
+
 <!-- show the dataframe -->
 <!-- show the code to clean it -->
 In the `clean_file` function, we loop from the bottom of the raw dataframe and combine empty rows with the row above to fix the empty line issue.
@@ -127,7 +170,8 @@ To account for context dependencies either before a word or after a word, follow
 ## Mapping Course Descriptions
 
 Now, we are ready to map the clean course descriptions void of punctuation errors and major context dependencies to our keyword list and the SDGs. 
-In the `R` directory, find the code to map course descriptions in `mapping_course_descriptions.R`. 
+In the `R` directory, find the code to map course descriptions in `mapping_course_descriptions.R`.  
+
 The following function `find_words` is the foundation for the mapping. Given some text, one of the 17 SDGs, and a keyword list, it returns a vector of all keywords in the text that map to the designated SDG (including repeats). 
 
 ```{r eval=TRUE}
@@ -158,7 +202,6 @@ find_words = Vectorize(function(text, sdg, keywords="usc_keywords", count_repeat
 
 
 Here is an example of how it works:
-
 
 ```{r}
 usc_keywords = read.csv("data/usc_keywords.csv")
@@ -219,11 +262,13 @@ for (course in sustainability$courseID){
 }
 ```
 
-We have tried multiple methods to determine sustainability classifications, and our current method is as follows:
-If a course's description does not map to any SDGs (no keywords in the master data) or only contains one keyword, it is "Not Related".
-If a course description contains two or more keywords, we categorize it as "SDG-Related".
-If a course maps to at least one social/economic SDG (SDGs 1-12, 16, 17) and one environmental goal (13, 14, 15), then it is labeled "Sustainability Focused".
-Code for achieving these labels are found in the R script.
+We have tried multiple methods to determine sustainability classifications, and our current method is as follows:  
+
+* If a course's description does not map to any SDGs (no keywords in the master data) or only contains one keyword, it is "NotRelated".  
+* If a course description contains two or more keywords, we categorize it as "SDG-Related".  
+* If a course maps to at least one social/economic SDG (SDGs 1-12, 16, 17) and one environmental goal (13, 14, 15), then it is labeled "Sustainability Focused".  
+
+Code for achieving these labels are found in the R script.  
 
 Lastly, we want to join this dataframe with the course data, so we run the following code:
 
@@ -235,7 +280,18 @@ write.csv(course_data, "usc_courses_full.csv", row.names = F)
 
 ## General Education
 
+We were given completely a different set of data for USC's general education requirements. Code for obtaining the GE categories and course titles is found in `general_education.R`. In this script, we join the GE data with the course / sustainability data and then go through and ensure that unmapped classes have "Not Related" as the sustainability classification. The resulting dataframe is used in the Shiny App for the general education page. 
+
 ## Creating Shiny App
 
+When I was tasked with creating a shiny app, I was daunted but eventually learned through trial and error. Despite the scary sight of 1400 lines of code, I can assure that anyone using this github repository can replicate the shiny app with little to no coding experience. To learn the basics, refer to [this tutorial.](https://rstudio.github.io/shinydashboard/)   
+
+If you follow along with the code in the `app.R` file in the "shiny_app" directory, you will understand the structure and functionality of a shiny app. 
+
+
 ## Questions?
+
+There have been many packages in R that have confused me, and I am very grateful for some developers that responded to my emails and helped me along the way.  
+
+If you have any questions, comments, or concerns, please reach out to me via email: [btinsley@usc.edu](mailto:btinsley@usc.edu)
 
